--- a/trunk/gaspar8/TODO.txt
+++ b/trunk/gaspar8/TODO.txt
@@ -19,7 +19,17 @@
 	__________________________________________________________________________________
 	
 
-	SNAPSHOT 20/04/2013
+	SNAPSHOT 21/04/2013
+	
+		>> ISSUE AGGIORNAMENTO commentsCount (provato su Article)
+			> CacheUtils.getAllMemCacheEntries()
+			> ArticleAdapterImpl.addCommentToArticle()
+				-- ottemgo la lista di tutte le entry in cache
+				-- scorro per cercare tutti i folder che contengon l'articolo
+				-- cacnello le entry trovate dalla cache
+			>> POTREBBE ESSERE PIU' LENTO > CONTROLLARE
+			>> SE FUNZIONA RIPORTARE SUI BLOG
+			[21/04/2013]
 
 		>> ANCORA SU OTTIMIZZAZIONI CACHE
 		
