--- a/trunk/gaspar8/TODO.txt
+++ b/trunk/gaspar8/TODO.txt
@@ -19,39 +19,34 @@
 	__________________________________________________________________________________
 	
 
-	SNAPSHOT 21/04/2013
+	SNAPSHOT 22/04/2013
 	
-		>> ISSUE AGGIORNAMENTO commentsCount (provato su Article)
+		>> VERIFICA APPSPOT 22/04/2013
+			- il refresh di comments count sembra ancora non funzionare (articles) >> IPOTESI: si può sfruttare PageBreadcrumb per fare la clean del folder ?
+			- Evento del giorno:
+				- l'altezza del body evento è limitata (taglia il contenuto del body)
+				
+		>> LOGGING
+			- ho eliminato tutti i log4j.properties inutili (gwtcommons, econyx-core) adesso si usano solo gaspar8/resources/log4j.properties e copycart/resources/log4j.propertis)
+			[22/04/2013]
+	
+		>> ISSUE AGGIORNAMENTO commentsCount (provato su Article) >> ANCORA DA SISTEMARE (PageBreadcrumb...]
 			> CacheUtils.getAllMemCacheEntries()
 			> ArticleAdapterImpl.addCommentToArticle()
-				-- ottemgo la lista di tutte le entry in cache
+				-- ottengo la lista di tutte le entry in cache
 				-- scorro per cercare tutti i folder che contengon l'articolo
 				-- cacnello le entry trovate dalla cache
 			>> POTREBBE ESSERE PIU' LENTO > CONTROLLARE
 			>> SE FUNZIONA RIPORTARE SUI BLOG
 			[21/04/2013]
 
-		>> ANCORA SU OTTIMIZZAZIONI CACHE
-		
-			>> ho parametrizzato l'ottimizzazione (*) (vedi sotto)
-			> it.mate.gwtcommons.server.dao.FindContext.useContextInRelationshipsResolver
-			> it.mate.econyx.server.services.impl.PortalPageAdapterImpl.internalFindById(Class<P>, String, boolean, boolean)
-			> it.mate.gwtcommons.server.utils.EntityRelationshipsResolver.resolveUnownedRelationshipsWithAnnotation(Object, Map<Key, Object>)
-			
-			>> utilizzare la log PortalPageAdapterImpl.internalFindById per capire se riesce a restingere l'utilizzo di questo comportamento
-			
-			>> ATTENZIONE: provando a settare true/false pare che il comportamento non cambi più!!!
-			
-			>> CASI DA PROVARE: view di acquisti in admin, aggiunta di un comment all'articolo (refresch del comments count in articleFolder)
-
-
-		>> VERIFICA ONLINE 19/04/2013
-			> ProducerProductPage
+		>> PRODUCER PAGE TEMPLATE
+			> nella ProducerProductPage sparisce il carrello
 				- non mantiene il template corretto (sparisce il carrello)
 					>> IPOTESI: quando costruisco le virtual page settare il template della ProducerFolderPage
+			> nella ProducerPage lasciare il calendario
 				
-		>> IN EVIDENZA - OTTIMIZZAZIONI CACHE
-			>>> PARAMETRIZZARE (*) ???
+		>> OTTIMIZZAZIONI CACHE
     		- EntityRelationshipsResolver.resolveUnownedRelationshipsWithAnnotation
     			> Map<Key, Object> resolvedEntities
     			>>> (*) Object relatedEntity = dao.findWithContext(new FindContext<Serializable>(this.context).setEntityClass(itemClass).setId(relatedKey));
@@ -64,47 +59,32 @@
     			> ottimizzazione per utilizzare la subclass ricavata dalla key
     		- PortalPageServiceImpl.removePageFromCache
     			> serve per forzare il refresh della cahce in caso come ArticleFolderPage (commentsCount sui childreen)
-    		[18/04/2013]
+			>> ho parametrizzato l'ottimizzazione (*)
+				> it.mate.gwtcommons.server.dao.FindContext.useContextInRelationshipsResolver
+				> it.mate.econyx.server.services.impl.PortalPageAdapterImpl.internalFindById(Class<P>, String, boolean, boolean)
+				> it.mate.gwtcommons.server.utils.EntityRelationshipsResolver.resolveUnownedRelationshipsWithAnnotation(Object, Map<Key, Object>)
+			>> CASI DI TEST: view di acquisti in admin, aggiunta di un comment all'articolo (refresch del comments count in articleFolder)
+    		[21/04/2013]
     		
-		>> BUG ProducerFolderPage
-			>> gae loop: IN TEST:
-				-- it.mate.gwtcommons.server.utils.EntityRelationshipsResolver
-					>> introdotto resolvedEntities per evitare i loop ricorsivi
-				[17/04/2013]
-				
-		>> IMPORTANTE OTTIMIZZAZIONE IN JdoDao
-			> it.mate.gwtcommons.server.dao.JdoDao.checkSubClassesResults
-				>>> se sono in una find per id nella key ho il nome della sub class specifica che mi serve, tento prima quella
-			[18/04/2013]
-			
-		---------------------------------------------------------------------------------
 
 		>> DOCUMENT LIBRARY
 			> TODO: cancellazione document
 	 		> TODO: MEMORIZZARE CONTENT TYPE SU DS
 				- BlobUploadServlet get BlobInfo
 				- RestController response.setContentType XXX
-			> Blobstore API >> [07/04/2013]
-			> caricamento documenti da setup [12/04/2013]
 			> per il momento fisso mime type = pdf
 			
 		>> BlogPage, Blog, BlogDiscussion, BlogComment
 			>> STILI
-			>> NON FUNZIONA BENE IL REFRESH DI COMMENTS COUNT
-			>>> VEDI http://gasparotto.forumattivo.com/
+				>>> VEDI http://gasparotto.forumattivo.com/
 			> TODO:
 				>> dati di riepilogo da mostrare nella view (stile forum):
-				BlogDs > discussionsCount, lastDiscussion (BlogDiscussion)
-					   > si aggiornano nel ds quando si modifica discussions
-				BlogDiscussionDs > commentsCount, lastComment (BlogComment)
-								 > si aggiornano nel ds quando si modifica comments
 				>> servono per fare gli ordinamenti nella view (forum like...)
 
 		>> STYLING E CONTENUTI PAGINE DAL SITO [2]
 			>>> VEDI STILE Calendario e BoxContainer >>> http://www.giuliettochiesa.it/  !!!
 			>>> SPOSTATO TUTTO IN it.mate.econyx.client.css.AppClientBundle > app-bundel.css, app-bundle-custom.css
 			>>> TEMPLATE 1: http://btemplates.com/2013/blogger-template-abstractline/demo/
-			>>> BUG articoli: aggiungi commento, occorre fare F5 per ricaricare il conteggio dei commenti in ArticleFolderView
 			> AGGIORNAMENTO CONTENUTI SITO PER PRESENTAZIONE
 			> css pagine
 			> css articoli
@@ -115,6 +95,7 @@
 					
 		>> RIFARE TEST ORDINI
 			> prima di ripresntare fare un test sugli ordini / stati / prepagato
+			>> VEDI SOPESI SOTTO
 			
 		>> ProducerFolderPage [3]
 			> ProducerFolderPage >> 17/04/2013
@@ -125,11 +106,11 @@
 				::role (string) > es: general_admin, pagine_admin, articoli_admin, ...
 				::isUserInRole (string)
 
-		>> ListPropertyWrapper
+		>> it.mate.gwtcommons.client.utils.CollectionPropertyClientUtil
 			> mettere in tutti i getter getList dei tx
 			>> i metodi clone e wrap funzionano solo con jdk 1.7 [10/04/2013]
 			
-		>> ListPropertyServerWrapper
+		>> it.mate.gwtcommons.server.model.CollectionPropertyServerUtil
 			> provato su BlogDs... [09/04/2013]
 			> se funziona riportare su altri ds
 		
