--- a/gaspar8/TODO.txt
+++ b/gaspar8/TODO.txt
@@ -12,6 +12,10 @@
 		
 	---------------------------------------------------------------------------------------------------------
 
+	RISORSE IMPORTANTI
+	
+		http://www.colorzilla.com/gradient-editor/
+
 		
 	__________________________________________________________________________________
 
